--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -18,7 +18,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/detailText"
+        android:id="@+id/aboutText"
         android:layout_width="389dp"
         android:layout_height="256dp"
         android:layout_marginTop="120dp"
@@ -42,7 +42,7 @@
         android:text="TextView"
         android:textColor="@color/black"
         android:textSize="40dp"
-        app:layout_constraintBottom_toTopOf="@+id/detailText"
+        app:layout_constraintBottom_toTopOf="@+id/aboutText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
