--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -8,9 +8,9 @@
 
     <ImageView
         android:id="@+id/pictureView"
-        android:layout_width="match_parent"
-        android:layout_height="253dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="399dp"
+        android:layout_height="259dp"
+        android:layout_marginTop="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,14 +19,14 @@
 
     <TextView
         android:id="@+id/aboutText"
-        android:layout_width="389dp"
-        android:layout_height="256dp"
-        android:layout_marginTop="120dp"
+        android:layout_width="402dp"
+        android:layout_height="223dp"
+        android:layout_marginTop="128dp"
         android:paddingLeft="5dp"
         android:text="TextView"
         android:textColor="@color/purple_700"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pictureView" />
 
@@ -47,5 +47,21 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pictureView" />
+
+    <TextView
+        android:id="@+id/workText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="cursive"
+        android:text="TextView"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/pictureView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
